--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -16,15 +16,15 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-blue);
-  --color-background-soft: var(--vt-c-blue-soft);
-  --color-background-mute: var(--vt-c-blue-mute);
+  --color-background: var(--vt-c-white);
+  --color-background-soft: var(--vt-c-white-soft);
+  --color-background-mute: var(--vt-c-white-mute);
 
-  --color-border: var(--vt-c-divider-dark-2);
-  --color-border-hover: var(--vt-c-divider-dark-1);
+  --color-border: var(--vt-c-divider-light-2);
+  --color-border-hover: var(--vt-c-divider-light-1);
 
-  --color-heading: var(--vt-c-text-dark-1);
-  --color-text: var(--vt-c-text-dark-2);
+  --color-heading: var(--vt-c-text-light-1);
+  --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
 }
