--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,12 +1,12 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --vt-c-white: #D8DCE0;
+  --vt-c-white-soft: #D8DCE0;
+  --vt-c-white-mute: #D8DCE0;
 
-  --vt-c-blue: #0F1119;
-  --vt-c-blue-soft: #0F1119;
-  --vt-c-blue-mute: #0F1119;
+  --vt-c-blue: #161A25;
+  --vt-c-blue-soft: #161A25;
+  --vt-c-blue-mute: #161A25;
 
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
   --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
@@ -16,7 +16,7 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
+  --color-background: var(--vt-c-white-mute);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
